@@ -7,6 +7,7 @@ import static org.junit.Assert.assertEquals;
 
 import java.io.Reader;
 import java.io.StringReader;
+import java.util.List;
 
 import net.sourceforge.pmd.PMD;
 import net.sourceforge.pmd.lang.ast.Node;
@@ -17,13 +18,15 @@ import org.mozilla.javascript.ast.AstRoot;
 
 public class EcmascriptParserTest {
 
+    private EcmascriptNode<AstRoot> parse(String code) {
+        EcmascriptParser parser = new EcmascriptParser(new EcmascriptParserOptions());
+        Reader sourceCode = new StringReader(code);
+        return parser.parse(sourceCode);
+    }
+
     @Test
     public void testLineNumbers() {
-	
-	EcmascriptParser parser = new EcmascriptParser(new EcmascriptParserOptions());
-	Reader sourceCode = new StringReader(SOURCE_CODE);
-	EcmascriptNode<AstRoot> node = parser.parse(sourceCode);
-
+    EcmascriptNode<AstRoot> node = parse(SOURCE_CODE);
 	assertEquals(1, node.getBeginLine());
 	assertEquals(1, node.getBeginColumn());
 	assertEquals(3, node.getEndLine());
@@ -40,6 +43,19 @@ public class EcmascriptParserTest {
 	assertEquals(3, child.getBeginColumn());
 	assertEquals(2, child.getEndLine());
 	assertEquals(16, child.getEndColumn());
+    }
+
+    /**
+     * Test bug https://sourceforge.net/p/pmd/bugs/1118/
+     */
+    @Test
+    public void testArrayAccess() {
+        EcmascriptNode<AstRoot> node = parse("function a() { b['a'] = 1; c[1] = 2; }");
+        List<ASTElementGet> arrays = node.findDescendantsOfType(ASTElementGet.class);
+        assertEquals("b", arrays.get(0).getTarget().getImage());
+        assertEquals("a", arrays.get(0).getElement().getImage());
+        assertEquals("c", arrays.get(1).getTarget().getImage());
+        assertEquals("1", arrays.get(1).getElement().getImage());
     }
 
     private static final String SOURCE_CODE =
